fix(my-daos): single-dao-left-alignment-fix

--- a/pages/my/daos/MyDaosPage.module.scss
+++ b/pages/my/daos/MyDaosPage.module.scss
@@ -63,7 +63,5 @@
 }
 
 .singleDao {
-  @include astro-desktop {
-    place-items: start;
-  }
+  place-items: start;
 }
